<resources>
    <string name="app_name">ScanningExternalStorage</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="share_btn">Share</string>
    <string name="file_details">External Storage File Details with Biggest top 10 files name with size
    and top 5 files extension with frequencies</string>
    <string name="file_name">Name</string>
    <string name="file_size">Size</string>
    <string name="extension_name">Extension</string>
    <string name="frequency">Frequencies</string>


</resources>
